--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="sosek">Departemen Sosial Ekonomi</string>
     <string name="app_desc">Teman Tani Pintar</string>
     <string name="contacs">Contact Us</string>
+    <string name="editJudul">Untuk Menuliskan Judul Konten</string>
+    <string name="pengolahantemulawak">Pengolahan Produk Instan Temulawak Plus Jahe</string>
 </resources>
